# WaterDetectionSystem

.cache/clangd/index/: BoatDetector.cpp.164FFF0A41ED410F.idx  BoatDetector.hpp.5455B3A2980DAC55.idx  FeatureControl.cpp.E5B02D4A8BCA3C92.idx  FeatureControl.hpp.8EF4C81F3B8C214E.idx  HumanDetector.cpp.066AAE8DB6E3EC00.idx  HumanDetector.hpp.DD8244158053FB8D.idx  NotificationSystem.cpp.608FA18D160F836C.idx  NotificationSystem.hpp.F555250C23E54AFC.idx  ObjectDetector.cpp.882FDDAF3048A8C4.idx  ObjectDetector.hpp.5BF73F090B2C2702.idx  SeaDetector.cpp.5955664EC48A4700.idx  SeaDetector.hpp.7445AF2933A53852.idx  SkinDetector.cpp.42D976C9587BD0F2.idx  SkinDetector.hpp.F9DFAE7E568CD5F5.idx  TrackedObject.cpp.5201F7B301512E63.idx  TrackedObject.hpp.616EEE49591CC3F0.idx  main.cpp.F4B657EA0B2E0280.idx
AdvancedDetectionSystem/: CMakeLists.txt  README.md  main.cpp
AdvancedDetectionSystem.xcodeproj/: project.pbxproj
AdvancedDetectionSystem.xcodeproj/xcuserdata/furkansevinc.xcuserdatad/xcschemes/: xcschememanagement.plist
AdvancedDetectionSystem/.cache/clangd/index/: BoatDetector.cpp.164FFF0A41ED410F.idx  FeatureControl.cpp.E5B02D4A8BCA3C92.idx  FeatureControl.hpp.8EF4C81F3B8C214E.idx  HumanDetector.cpp.066AAE8DB6E3EC00.idx  HumanDetector.hpp.DD8244158053FB8D.idx  NotificationSystem.cpp.608FA18D160F836C.idx  NotificationSystem.hpp.F555250C23E54AFC.idx  ObjectDetector.cpp.882FDDAF3048A8C4.idx  ObjectDetector.hpp.5BF73F090B2C2702.idx  SeaDetector.cpp.5955664EC48A4700.idx  SeaDetector.hpp.7445AF2933A53852.idx  SkinDetector.cpp.42D976C9587BD0F2.idx  SkinDetector.hpp.F9DFAE7E568CD5F5.idx  TrackedObject.cpp.5201F7B301512E63.idx  TrackedObject.hpp.616EEE49591CC3F0.idx  main.cpp.F4B657EA0B2E0280.idx
AdvancedDetectionSystem/include/: BoatDetector.hpp  FeatureControl.hpp  HumanDetector.hpp  NotificationSystem.hpp  ObjectDetector.hpp  SeaDetector.hpp  SkinDetector.hpp  TrackedObject.hpp
AdvancedDetectionSystem/src/: BoatDetector.cpp  FeatureControl.cpp  HumanDetector.cpp  NotificationSystem.cpp  ObjectDetector.cpp  SeaDetector.cpp  SkinDetector.cpp  TrackedObject.cpp  main.cpp
